tweak mobile spacing to ensure visibility of entire hero card

--- a/src/components/HeroGrid.css
+++ b/src/components/HeroGrid.css
@@ -1,6 +1,6 @@
 
 .cards {
-  padding-top: 2rem;
+
 }
 
 .appeared {
